@@ -1,7 +1,7 @@
 <!-- 
 a dtd for a notation used to define state machines
-Time-stamp: <02/09/03 13:10:41 smulloni> 
-$Id: flowdef.dtd,v 1.2 2002/09/03 14:14:47 smulloni Exp $ 
+Time-stamp: <02/09/04 12:36:40 smulloni> 
+$Id: flowdef.dtd,v 1.3 2002/09/03 20:40:36 smulloni Exp $ 
 
 Copyright (C) 2002 Jacob Smullyan <smulloni@smullyan.org>
   
@@ -73,7 +73,7 @@ attribute.  Its name should be unique among fields.
 <!ATTLIST field
     id ID #IMPLIED
     idref IDREF #IMPLIED
-    name CDATA #REQUIRED>
+    fieldname CDATA #REQUIRED>
 
 <!-- 
 a cond is a way of writing if <expr> then node1; else 
@@ -81,6 +81,9 @@ node2. node2 is optional.
 -->
 
 <!ELEMENT cond expr %node; %node;? >
+<!ATTLIST cond
+    id ID #IMPLIED
+    idref IDREF #IMPLIED>
 
 <!-- 
 an expr is also a data segment, containing code that can 
