@@ -1,3 +1,8 @@
+2002-09-04  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* pylibs/flowmgr/parser.py: parser for flow manager, partially
+	verified.  
+
 2002-08-30  Jacob Smullyan  <jsmullyan@wnyc.org>
 
 	* pylibs/flowmgr/flowdef.dtd: DTD for flow definitions.
